symmetrical-broccoli-routetable-eu-west-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-84240ce3", 
        "VpcId": "vpc-869d41e1", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
